# CanIEatTheMushroom

./: .env.example  .gitignore  README.md  TESTING.md  cloud.yml  generate_rules.py  main.py  pyproject.toml  pytest.ini  requirements.txt  rules.CLP  rxconfig.py
__marimo__/session/: generate_rules.py.json
app/: app.py  attributes.py  clips_engine.py  i18n.py  rules_engine.py  state.py  state_clips.py
app/components/: image_upload.py  question_form.py  radio_form.py  result_display.py
app/engines/: clips_engine.py  rules_engine.py
app/services/: __init__.py  llm_service.py  llm_vision.py
docs/: I18N_GUIDE.md  I18N_IMPLEMENTATION_SUMMARY.md  I18N_QUICKSTART.md
presentation/: .gitignore  package.json  pnpm-lock.yaml  slides.md
presentation/setup/: shiki.ts
presentation/snippets/: rules.txt
tests/: MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  test_mushroom_rules.py
translations/: en.json  tr.json
